<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:iconSpaceReserved="false">

    <PreferenceCategory app:title="@string/category_timers">

        <androidx.preference.SeekBarPreference
            app:key="active_duration"
            app:title="@string/active_duration_title"
            app:summary="@string/active_duration_summary"
            android:defaultValue="5"
            app:min="1"
            android:max="20"
            app:showSeekBarValue="true"
            app:updatesContinuously="true"/>

        <com.divinegames.mmover.MmSsSeekBarPreference
            app:key="pause_duration"
            app:title="@string/pause_duration_title"
            app:summary="@string/pause_duration_summary"
            android:defaultValue="36"
            app:min="0"
            android:max="180"
            app:showSeekBarValue="true"
            app:updatesContinuously="true"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/category_main_settings">

        <androidx.preference.SwitchPreferenceCompat
            app:key="vibration_enabled"
            app:title="@string/vibration_title"
            android:defaultValue="true" />

        <androidx.preference.SeekBarPreference
            app:key="brightness"
            app:title="@string/brightness_title"
            android:defaultValue="100"
            app:min="10"
            android:max="100"
            app:showSeekBarValue="true"
            app:updatesContinuously="true"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/category_personalization">

        <androidx.preference.DropDownPreference
            app:key="animation_style"
            app:title="@string/animation_style_title"
            app:entries="@array/animation_entries"
            app:entryValues="@array/animation_values"
            android:defaultValue="background_blocks_medium"
            app:widgetLayout="@layout/preference_widget_dropdown_arrow" />

        <androidx.preference.SeekBarPreference
            app:key="movement_speed"
            app:title="@string/speed_title"
            android:defaultValue="300"
            app:min="200"
            android:max="1000"
            app:showSeekBarValue="true"
            app:updatesContinuously="true"/>

        <androidx.preference.DropDownPreference
            app:key="language"
            app:title="@string/language_title"
            app:entries="@array/language_entries"
            app:entryValues="@array/language_values"
            app:widgetLayout="@layout/preference_widget_dropdown_arrow" />

    </PreferenceCategory>

</PreferenceScreen>